--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ scipy==1.6.2
 scikit_learn==0.22.1
 scikit-image==0.16.2
 scipy==1.7.1
-torch==1.5.0
-torchvision==0.6.0
-SimpleITK
+torch==1.12.0
+torchvision==0.13.0
+ACSConv
 
